<resources>
    <string name="app_name">EjemploGUI</string>
    <string name="hello_world">Hello Android!</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="hint_nombre">Digite el nombre</string>
    <string name="correo">Correo</string>
    <string name="hint_correo">Digite el correo</string>
    <string name="tel">Telefono</string>
    <string name="hint_tel">Digite el Telefono</string>
    <string name="boton">OK</string>

</resources>
